fixes ALI-32: Applied separation of concerns in swagger documentation for auth apis
